[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = [
    "pint", "primitives",
    "transaction", "block", "transaction_pool"
]
default-members = ["pint"]
exclude = []

[workspace.lints]
rust.unused_must_use = "deny"

[workspace.dependencies]
pint = { path = "pint" }
transaction = { path = "transaction" }
primitives = { path = "primitives" }
block = { path = "block" }
transaction_pool = { path = "transaction_pool" }
alloy-consensus = { version = "1.0.7", default-features = false }
tokio = { version = "1.0.7", features = ["full"] }
