[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = [
    "pint", "primitives",
    "transaction", "payload", "transaction_pool"
, "net", "storage", "executor", "consensus",]
default-members = ["pint"]
exclude = []

[workspace.lints]
rust.unused_must_use = "deny"

[workspace.dependencies]
pint = { path = "pint" }
transaction = { path = "transaction" }
primitives = { path = "primitives" }
payload = { path = "payload" }
transaction_pool = { path = "transaction_pool" }
net = { path = "net" }
consensus = { path = "consensus" }
node = { path = "node" }
executor = { path = "executor" }
storage = { path = "storage" }
alloy-consensus = { version = "1.0.7", default-features = false }
tokio = { version = "1.0.7", features = ["full"] }
tokio-stream = "0.1.17"
tracing = { version = "0.1.41" }
lock_api = { version = "0.4.13" }
parking_lot = { version =  "0.12.4" }
hex = { version = "0.4.3" }
