[package]
name = "transaction"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = { workspace = true, features = ["serde"] }
hex.workspace = true
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"]}
primitives.workspace = true
rand = "0.9.1"
sha2 = "0.10.9"

[dev.dependencies]
rand = "0.9.1"

[lints]
workspace = true
