[package]
name = "transaction_pool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
paste = "1.0.15"
primitives.workspace = true
transaction.workspace = true
storage.workspace = true
rand = "0.9.1"
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
hex.workspace = true

[lints]
workspace = true
